--- a/styles.css
+++ b/styles.css
@@ -1,45 +1,62 @@
 
 * {
-  border: 2px solid red;
+  margin: 0;
 }
 
-/* DESKTOP DIMENSIONS */
+* {
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+html {
+  height: 100%;
+  width: 100%;
+  position: relative;
+}
 
 body {
+  height: 100%;
+  width: 100%;
   background-color: whitesmoke;
-  margin: 0;
-  padding: 0;
 }
 
 header {
+  width: 100%;
+  position: relative;
+  background-color: #2b2b2b;
+  height: 24.5%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  vertical-align: center;
-  background-color: rgb(43,43,43);
-  width: 100%;
-}
-  
-.card-container {
-  display: grid;
-  grid-template-columns: 25% 25% 25% 25%;
-}
-
-.user-dropdown {
-  display: flex;
-  flex-direction: row-reverse;
-}
-
-.card {
-  height: 100px;
 }
 
 .logo {
-  height: 5%;
-  width: 5%;
+  height: 100%;
+  margin: 5%;
+}
+
+.dropdown-menu {
+  width: 16.2%;
+  height: 30%;
+  align-self: flex-end;
+  display: flex;
+  align-items: center;
+}
+
+.user-avatar {
+  height: 65%;
+}
+
+select {
+  width: 70%;
+  height: 40%;
+  background: transparent;
+  font-size: 1.2vw;
+  color: dodgerblue;
+  border: none;
 }
 
 .nav-bar {
+  height: 65%;
   display: flex;
   flex-direction: row-reverse;
   justify-content: space-between;
@@ -47,70 +64,216 @@ header {
 }
 
 nav {
+  width: 50.5%;
+  height: 40%;
   display: flex;
-  justify-content: space-around;
-  height: 50%;
-  width: 50%;
-  vertical-align: bottom;
 }
 
-.nav-button {
+nav > button {
+  width: 35%;
+  margin-left: 2%;
+  margin-right: 2%;
   display: flex;
   align-items: center;
+  font-size: 1.5vw;
+  font-weight: 300;
   background-color: transparent;
-  color: grey;
   border: none;
 }
 
-.nav-button > img {
-  height: 20px;
+nav > button > img {
+  height: 70%;
+  margin-right: 2%;
+}
+
+.shares-button {
+  width: 23%;
+  color: white;
+  font-weight: 200px;
+}
+
+.playlists-button {
+  color: lightgray;
+  font-weight: 100px;
+}
+
+.personal-videos-button {
+  width: 40%;
+  color: lightgray;
+  font-weight: 100px;
+}
+
+.shares-header {
+  font-size: 50px;
+  margin-top: 2%;
+  margin-bottom: 2%;
+  margin-left: 2%;
+}
+
+.card-container {
+  width: 98%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 20px;
+}
+
+.card {
+  width: inherit;
+  display: flex;
+  flex-direction: column;
+  height: 500px;
+  background-color: white;
+  box-shadow: 0 0 10px darkgrey;
+  margin-right: 5%;
+}
+
+.profile-pic-1,
+.profile-pic-2,
+.profile-pic-3,
+.profile-pic-4,
+.profile-pic-5,
+.profile-pic-6,
+.profile-pic-7,
+.profile-pic-8 {
+  display: flex;
+  justify-content: space-between;
+}
+
+.view-display {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: white;
+  margin-right: 5%;
+  margin-top: 5%;
+}
+
+.view-counter {
+  font-size: 40px;
+}
+
+.share-button {
+  background-image: url('./assets/share.svg');
+  background-size:40%;
+  background-position: center;
+  background-repeat: no-repeat;
+  border: none;
+  border-radius: 40px;
+  height: 40%;
+  width: 18%;
+  margin-left: 5%;
+  margin-top: 5%;
+}
+
+.profile-pic-1 {
+  background-image: url('./assets/profile-pics/1.jpg');
+  background-size: cover;
+  height: 40%;
+}
+
+.profile-pic-2 {
+  background-image: url('./assets/profile-pics/2.png');
+  background-size: cover;
+  height: 40%;
+}
+
+.profile-pic-3 {
+  background-image: url('./assets/profile-pics/3.jpg');
+  background-size: cover;
+  height: 40%;
+}
+
+.profile-pic-4 {
+  background-image: url('./assets/profile-pics/4.png');
+  background-size: cover;
+  height: 40%;
+}
+
+.profile-pic-5 {
+  background-image: url('./assets/profile-pics/5.png');
+  background-size: cover;
+  height: 40%;
+}
+
+.profile-pic-6 {
+  background-image: url('./assets/profile-pics/6.png');
+  background-size: cover;
+  height: 40%;
+}
+
+.profile-pic-7 {
+  background-image: url('./assets/profile-pics/7.jpg');
+  background-size: cover;
+  height: 40%;
+}
+
+.profile-pic-8 {
+  background-image: url('./assets/profile-pics/8.png');
+  background-size: cover;
+  height: 40%;
+}
+
+.card-text-container {
+  margin: 5%;
+  height: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.post-date {
+  margin-bottom: 5%;
+}
+
+.url-box {
+  background-color: lightgrey;
+  padding: 10px;
+  height: 40%;
+  overflow-wrap: break-word;
+  margin-bottom: 5%;
+}
+
+.playlist-name {
+  margin-bottom: 5%;
+}
+
+.attachments-counter {
+  font-size: 50px;
+  font-weight: 200px;
   color: dodgerblue;
 }
 
-/* TABLET DIMENSIONS */
-
-@media screen and (max-width: 768px) {
-  
-  nav {
-    width: 75%;
-  }
+@media screen and (max-width: 1025px) {
 
   .card-container {
-    display: grid;
-    grid-template-columns: 50% 50%;
-  }
-
-  .card {
-    height: 100px;
-    padding: 10px;
+    grid-template-columns: repeat(2, 1fr);
   }
 
 }
 
-/* SMART PHONE DIMENSIONS */
+@media screen and (max-width: 400px) {
 
-@media screen and (max-width: 414px) {
-  
-  .logo {
+  .card-container {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  header {
     height: 10%;
-    width: 10%;
+    width: 100%;
   }
 
-  .card-container {
-    display: grid;
-    grid-template-columns: 100%;
+  .logo {
+    height: 40%;
   }
 
-  .card {
-    height: 100px;
-  }
-
-  .nav-button {
+  nav {
     display: flex;
-    align-items: center;
-    background-color: transparent;
-    font-size: 0%;
+    justify-content: space-around;
+  }
+
+  nav > button {
+    font-size: 0;
+    padding: 0;
   }
 
 }
-
